--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
            {% block login %}{% endblock login %}
            {% block dashboard %}{% endblock dashboard %}
 
-           
+
 
    
             <script type="text/javascript" src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
@@ -31,8 +31,8 @@
             <script type="text/javascript" src="{% static 'js/jquery.dataTables.min.js' %}"></script> 
             <script type="text/javascript" src="{% static 'js/dataTables.bootstrap5.min.js' %}"></script> 
             <script type="text/javascript" src="{% static 'js/htmx.min.js' %}" defer ></script> 
-
-
+            <script type="text/javascript" src="{% static 'js/chart.min.js' %}" defer ></script> 
+            
 
 
 
