--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -6,6 +6,21 @@
 {% include 'header/main_header.html' %}
 
 
-   <h3>lsdljvhldhslfhsdlfhslkdfh</h3>
+  <div class="container ">
+     <div class="mt-2 ">
+
+        <div>
+            <canvas id="myChart"></canvas>
+          </div>
+
+        
+     </div>
+  </div>
+
+  
+
+
+  
+
   
 {% endblock dashboard %}
