--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -5,22 +5,48 @@
 
 {% include 'header/main_header.html' %}
 
+  <div style="font-size: 30px !important; " class="mt-3 text-center">DASHBOARD</div>
 
-  <div class="container ">
-     <div class="mt-2 ">
+  <div class="d-flex justify-content-center ">
+    <div>
+      <div class="container mt-3 text-center">
+        <div class="card">
+          <h5 class="card-header">SURAT MASUK</h5>
+          <div class="card-body">
+            <h5 class="card-title">Special title treatmentbsfsgsgsgsg</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
 
-        <div>
-            <canvas id="myChart"></canvas>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Surat Masuk</a>
           </div>
+        </div>
+      </div>
+    </div>
+    <div>
+      <div class="container mt-3 text-center">
+        <div class="card">
+          <h5 class="card-header">SURAT MASUK</h5>
+          <div class="card-body">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
 
-        
-     </div>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Surat Keluar</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-
-  
-
-
-  
-
-  
-{% endblock dashboard %}
+{% endblock %}
