--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,8 @@
             <script type="text/javascript" src="{% static 'js/dataTables.bootstrap5.min.js' %}"></script> 
             <script type="text/javascript" src="{% static 'js/htmx.min.js' %}" defer ></script> 
             <script type="text/javascript" src="{% static 'js/chart.min.js' %}" defer ></script> 
+            <script type="text/javascript" src="{% static 'js/popper.min.js' %}" defer ></script> 
+            
             
 
 
