--- a/templates/pages/surat_masuk/admin/admin.html
+++ b/templates/pages/surat_masuk/admin/admin.html
@@ -3,9 +3,9 @@
 
 {% block surat_masuk_admin %}
 
-  {% include 'header/admin/main_header.html' %}
+  {% include 'header/admin/surat_masuk/main_header.html' %}
 
-  <div class="container-fluid mt-3 text-white" style="">
+  <div class="container-fluid mt-3 text-white" >
     <h5 class="text-center">SURAT MASUK</h5>
 
     <div style="margin-top: -2.5rem; justify-content: space-between; " class="d-flex">
