--- a/templates/pages/setting/klasifikasi/index.html
+++ b/templates/pages/setting/klasifikasi/index.html
@@ -9,7 +9,7 @@
   <div class="container-fluid mt-3 text-white">
     <div style="margin-top: 1rem; justify-content: end; " class="d-flex">
       <div class="gap-5">
-        <button type="button" class="btn btn-success btn-sm mb-2" data-bs-toggle="modal" data-placement="bottom" title="UPDATE" data-bs-target="#tambah_klasifikasi">TAMBAH KLASIFIKASI</button>
+        <button type="button" class="btn btn-success btn-sm mb-2" data-bs-toggle="modal" data-placement="bottom" title="UPDATE" data-bs-target="#button_tambah_klasifikasi">TAMBAH KLASIFIKASI</button>
       </div>
     </div>
 
