--- a/templates/pages/setting/klasifikasi/modal/tambah_klasifikasi.html
+++ b/templates/pages/setting/klasifikasi/modal/tambah_klasifikasi.html
@@ -1,4 +1,4 @@
-<div class="modal fade" id="tambah_klasifikasi" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+<div class="modal fade" id="button_tambah_klasifikasi" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
         <div class="modal-header">
