on progress surat masuk

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,8 +30,9 @@
            {% comment %} {% block setting %}{% endblock setting %} {% endcomment %}
            {% block klasifikasi %}{% endblock klasifikasi %}
            {% block jenis_surat %}{% endblock jenis_surat %}
-            {% block derajat_surat %}{% endblock derajat_surat %}
+          {% block derajat_surat %}{% endblock derajat_surat %}
 
+          {% block tambah_surat_masuk %}{% endblock tambah_surat_masuk %}
 
    
             <script type="text/javascript" src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
