--- a/templates/pages/surat_masuk/admin/pages_tambah_surat_masuk.html
+++ b/templates/pages/surat_masuk/admin/pages_tambah_surat_masuk.html
@@ -31,7 +31,7 @@
 
         <div class="col-3">
           <label for="inputPassword4" class="form-label">TANGGAL AGENDA</label>
-          <input type="date" class="form-select" placeholder="First name" aria-label="First name" name="tanggal_agenda"  value="{{  tgl_agenda | date:"Y-m-d"  }}" readonly />
+          <input type="date" class="form-select" placeholder="First name" aria-label="First name" name="tanggal_agenda"  value="{{  hari_ini | date:"Y-m-d"  }}" readonly />
         </div>  
         <div class="col-3">
           <label for="inputAddress" class="form-label">NO AGENDA</label>
