on progress generate no agenda

--- a/templates/header/admin/dashboard/main_header.html
+++ b/templates/header/admin/dashboard/main_header.html
@@ -10,6 +10,7 @@
 
       <ul class="nav nav-underline">
         <div style="margin-right: 3.5rem; font-weight: bold; " class="d-flex gap-4">
+          <span class="mt-2 text-warning  ">Selamat Datang , {{ user|capfirst }}</span>
           <li class="nav-item">
             <a class="nav-link   {% if request.path == '/surat/surat_masuk/' %}{% endif %}" href="{% url 'surat_masuk' %}">Surat Masuk</a>  
           </li>
